; ModuleID = '/home/carl/AnghaBench/linux/fs/ocfs2/extr_stack_user.c_user_dlm_lock.c'
source_filename = "/home/carl/AnghaBench/linux/fs/ocfs2/extr_stack_user.c_user_dlm_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ocfs2_cluster_connection = type { i32 }
%struct.ocfs2_dlm_lksb = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i8* }

@DLM_LKF_NODLCKWT = common dso_local global i32 0, align 4
@fsdlm_lock_ast_wrapper = common dso_local global i32 0, align 4
@fsdlm_blocking_ast_wrapper = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ocfs2_cluster_connection*, i32, %struct.ocfs2_dlm_lksb*, i32, i8*, i32)* @user_dlm_lock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @user_dlm_lock(%struct.ocfs2_cluster_connection* %0, i32 %1, %struct.ocfs2_dlm_lksb* %2, i32 %3, i8* %4, i32 %5) #0 {
  %7 = alloca %struct.ocfs2_cluster_connection*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.ocfs2_dlm_lksb*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct.ocfs2_cluster_connection* %0, %struct.ocfs2_cluster_connection** %7, align 8
  store i32 %1, i32* %8, align 4
  store %struct.ocfs2_dlm_lksb* %2, %struct.ocfs2_dlm_lksb** %9, align 8
  store i32 %3, i32* %10, align 4
  store i8* %4, i8** %11, align 8
  store i32 %5, i32* %12, align 4
  %14 = load %struct.ocfs2_dlm_lksb*, %struct.ocfs2_dlm_lksb** %9, align 8
  %15 = getelementptr inbounds %struct.ocfs2_dlm_lksb, %struct.ocfs2_dlm_lksb* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i8*, i8** %16, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %26, label %19

19:                                               ; preds = %6
  %20 = load %struct.ocfs2_dlm_lksb*, %struct.ocfs2_dlm_lksb** %9, align 8
  %21 = bitcast %struct.ocfs2_dlm_lksb* %20 to i8*
  %22 = getelementptr inbounds i8, i8* %21, i64 4
  %23 = load %struct.ocfs2_dlm_lksb*, %struct.ocfs2_dlm_lksb** %9, align 8
  %24 = getelementptr inbounds %struct.ocfs2_dlm_lksb, %struct.ocfs2_dlm_lksb* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  store i8* %22, i8** %25, align 8
  br label %26

26:                                               ; preds = %19, %6
  %27 = load %struct.ocfs2_cluster_connection*, %struct.ocfs2_cluster_connection** %7, align 8
  %28 = getelementptr inbounds %struct.ocfs2_cluster_connection, %struct.ocfs2_cluster_connection* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* %8, align 4
  %31 = load %struct.ocfs2_dlm_lksb*, %struct.ocfs2_dlm_lksb** %9, align 8
  %32 = getelementptr inbounds %struct.ocfs2_dlm_lksb, %struct.ocfs2_dlm_lksb* %31, i32 0, i32 0
  %33 = load i32, i32* %10, align 4
  %34 = load i32, i32* @DLM_LKF_NODLCKWT, align 4
  %35 = or i32 %33, %34
  %36 = load i8*, i8** %11, align 8
  %37 = load i32, i32* %12, align 4
  %38 = load i32, i32* @fsdlm_lock_ast_wrapper, align 4
  %39 = load %struct.ocfs2_dlm_lksb*, %struct.ocfs2_dlm_lksb** %9, align 8
  %40 = load i32, i32* @fsdlm_blocking_ast_wrapper, align 4
  %41 = call i32 @dlm_lock(i32 %29, i32 %30, %struct.TYPE_2__* %32, i32 %35, i8* %36, i32 %37, i32 0, i32 %38, %struct.ocfs2_dlm_lksb* %39, i32 %40)
  store i32 %41, i32* %13, align 4
  %42 = load i32, i32* %13, align 4
  ret i32 %42
}

declare dso_local i32 @dlm_lock(i32, i32, %struct.TYPE_2__*, i32, i8*, i32, i32, i32, %struct.ocfs2_dlm_lksb*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
